vs code and husky folders added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -330,12 +330,11 @@ paket-files/
 .idea/
 *.sln.iml
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# VisualStudioCode
+.vscode
+
+# Husky
+.husky
 
 # CodeRush
 .cr/
