--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@nestjs/common": "^8.1.1",
-    "@nestjs/core": "^8.1.1",
+    "@nestjs/axios": "^0.0.8",
+    "@nestjs/common": "^8.4.6",
+    "@nestjs/config": "^2.1.0",
+    "@nestjs/core": "^8.4.6",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/sequelize": "^8.0.0",
+    "axios": "^0.27.2",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -39,7 +42,6 @@
     "@nestjs/testing": "^8.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
     "@types/sequelize": "^4.28.13",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
